--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NeuClix Project Dashboard</title>
+  <title>NeuClix Project Hub</title>
   <style>
     body {
       margin: 0;
@@ -14,16 +14,15 @@
 
     header {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2.5rem 1rem;
       animation: fadeIn 1.2s ease-out;
     }
 
     h1 {
-      font-size: 2.5rem;
-      background: linear-gradient(90deg, #00ffaa, #00aaff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: pulse 3s infinite alternate;
+      font-size: 2.8rem;
+      color: #00ffaa;
+      text-shadow: 0 0 5px #00ffaa, 0 0 10px #00ffaa, 0 0 20px #00ffaa, 0 0 40px #00ffaa;
+      animation: flicker 2s infinite alternate;
     }
 
     p {
@@ -44,11 +43,10 @@
 
     .card {
       background: #1e1e1e;
-      padding: 1.5rem;
+      padding: 2rem;
       border-radius: 1rem;
-      box-shadow: 0 0 0 rgba(0, 255, 200, 0.2);
       transition: all 0.3s ease-in-out;
-      position: relative;
+      box-shadow: 0 0 0 rgba(0, 255, 200, 0.2);
     }
 
     .card:hover {
@@ -87,6 +85,38 @@
       box-shadow: 0 0 20px #00aaff88;
     }
 
+    section.status {
+      max-width: 1100px;
+      margin: 3rem auto;
+      padding: 2rem;
+      background: #151515;
+      border-radius: 1rem;
+      box-shadow: 0 0 20px rgba(0,255,170,0.05);
+    }
+
+    section.status h2 {
+      color: #00ffaa;
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      text-shadow: 0 0 5px #00ffaa;
+    }
+
+    .status-item {
+      margin-bottom: 2rem;
+    }
+
+    .status-item h3 {
+      margin-bottom: 0.3rem;
+      color: #00aaff;
+    }
+
+    .status-item p {
+      font-size: 0.95rem;
+      color: #ccc;
+      margin: 0.2rem 0;
+    }
+
     footer {
       text-align: center;
       padding: 1rem;
@@ -94,13 +124,10 @@
       color: #666;
     }
 
-    @keyframes pulse {
-      from {
-        transform: scale(1);
-      }
-      to {
-        transform: scale(1.03);
-      }
+    @keyframes flicker {
+      0% { opacity: 1; }
+      50% { opacity: 0.85; }
+      100% { opacity: 1; }
     }
 
     @keyframes fadeIn {
@@ -113,25 +140,57 @@
 
   <header>
     <h1>🚀 NeuClix Project Hub</h1>
-    <p>Everything we're building — smarter content, powerful automation, and a future-ready platform.</p>
+    <p>Smarter content. Powerful automation. Future-ready platform.</p>
   </header>
 
   <section class="grid">
     <div class="card">
-      <h3>🕸️ NeuClix.com</h3>
-      <p>Built in Drupal with Vue integration. Custom Twig + YAML-based content scaffolding. Hosting on DigitalOcean.</p>
+      <h3>🧠 NeuClix.com</h3>
+      <p>Drupal 10 + Vue frontend. YAML-based content types. Hosted on DigitalOcean.</p>
     </div>
     <div class="card">
       <h3>🤖 MCP + Chain Reactor</h3>
-      <p>n8n-powered control panel for AI content. Generates SEO blog posts, YouTube scripts, and schema in real time.</p>
+      <p>n8n-based AI control panel. Generates SEO-rich content, schema, and video scripts.</p>
     </div>
     <div class="card">
       <h3>⚙️ Onboarding App</h3>
-      <p>Firebase chatbot for intake of new clients. Collects logos, services, socials. Connects to automations instantly.</p>
+      <p>Firebase chatbot collects business info. Feeds into Sheets and GPT pipeline via n8n.</p>
     </div>
     <div class="card">
       <h3>📄 Press Release Engine</h3>
-      <p>Custom GPT-generated press releases, pushed to Releasethepress.com. Supports local SEO and client spotlighting.</p>
+      <p>Auto-generates publish-ready press releases tied to GPT and Releasethepress.com.</p>
+    </div>
+  </section>
+
+  <section class="status">
+    <h2>🧾 Project Status</h2>
+
+    <div class="status-item">
+      <h3>NeuClix.com Website</h3>
+      <p><strong>Status:</strong> YAML field config working, base theme installed</p>
+      <p><strong>Needs:</strong> Vue component logic + routing in Twig</p>
+      <p><strong>Next:</strong> Rick to help with front-end scaffolding</p>
+    </div>
+
+    <div class="status-item">
+      <h3>MCP + Chain Reactor</h3>
+      <p><strong>Status:</strong> Prompt manager + output structure working in Sheets</p>
+      <p><strong>Needs:</strong> UI layer for prompt config + output preview</p>
+      <p><strong>Next:</strong> Rick to help build front-end dashboard in Vue</p>
+    </div>
+
+    <div class="status-item">
+      <h3>Onboarding App</h3>
+      <p><strong>Status:</strong> Fields finalized, Firebase working</p>
+      <p><strong>Needs:</strong> UI polish + webhook fallback</p>
+      <p><strong>Next:</strong> Rick to help clean up UI layout and test n8n webhook</p>
+    </div>
+
+    <div class="status-item">
+      <h3>Press Release Engine</h3>
+      <p><strong>Status:</strong> Templates ready in GPT system</p>
+      <p><strong>Needs:</strong> Auto-publish trigger + frontend view</p>
+      <p><strong>Next:</strong> Optional Vue view to show press archive</p>
     </div>
   </section>
 
