--- a/index.html
+++ b/index.html
@@ -4,37 +4,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NeuClix Project Hub</title>
+  <link rel="icon" href="https://kzmov9pprwibsw6dsmt6.lite.vusercontent.net/favicon.ico" type="image/x-icon" />
   <style>
+    /* Font + Base Reset */
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
-      color: #f0f0f0;
+      font-family: 'Inter', sans-serif;
+      background: #0e0e0e;
+      color: #e0e0e0;
+      line-height: 1.6;
     }
 
     header {
       text-align: center;
-      padding: 2.5rem 1rem;
-      animation: fadeIn 1.2s ease-out;
+      padding: 3rem 1rem 2rem;
+    }
+
+    header img {
+      width: 80px;
+      filter: drop-shadow(0 0 6px #00ffaaaa);
+      margin-bottom: 1rem;
     }
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       color: #00ffaa;
-      text-shadow: 0 0 5px #00ffaa, 0 0 10px #00ffaa, 0 0 20px #00ffaa, 0 0 40px #00ffaa;
-      animation: flicker 2s infinite alternate;
+      margin: 0;
+      text-shadow: 0 0 10px #00ffaa;
     }
 
     p {
       max-width: 700px;
-      margin: 0 auto;
+      margin: 0 auto 2rem;
+      color: #b0b0b0;
       font-size: 1.1rem;
-      color: #ccc;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 1.5rem;
       padding: 2rem;
       max-width: 1200px;
@@ -42,128 +52,123 @@
     }
 
     .card {
-      background: #1e1e1e;
-      padding: 2rem;
-      border-radius: 1rem;
-      transition: all 0.3s ease-in-out;
-      box-shadow: 0 0 0 rgba(0, 255, 200, 0.2);
+      background: #161616;
+      border: 1px solid #00ffaa33;
+      border-radius: 12px;
+      padding: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,255,170,0.08);
+      transition: all 0.3s ease;
     }
 
     .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 12px 30px rgba(0, 255, 200, 0.25);
+      transform: translateY(-4px);
+      box-shadow: 0 10px 30px rgba(0,255,170,0.15);
     }
 
     .card h3 {
+      margin-top: 0;
       color: #00ffaa;
-      margin-bottom: 0.5rem;
+      font-size: 1.3rem;
     }
 
     .card p {
-      color: #aaa;
+      color: #ccc;
       font-size: 0.95rem;
+    }
+
+    section.status {
+      background: #141414;
+      border-top: 1px solid #00ffaa22;
+      padding: 2.5rem 2rem;
+      max-width: 1000px;
+      margin: 3rem auto;
+      border-radius: 10px;
+    }
+
+    section.status h2 {
+      text-align: center;
+      color: #00ffaa;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    .status-item {
+      margin-bottom: 1.75rem;
+    }
+
+    .status-item h3 {
+      margin-bottom: 0.3rem;
+      color: #00aaff;
+      font-size: 1.2rem;
+    }
+
+    .status-item p {
+      margin: 0.2rem 0;
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+
+    .status-item p strong {
+      color: #00ffaa;
     }
 
     .btn {
       display: inline-block;
       margin: 2rem auto;
       padding: 0.75rem 2rem;
-      border: none;
       background: #00ffaa;
-      color: #0a0a0a;
+      color: #0e0e0e;
+      border: none;
       border-radius: 50px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 15px #00ffaa55;
-      text-align: center;
+      font-weight: 600;
+      text-decoration: none;
+      transition: 0.3s ease;
+      box-shadow: 0 0 10px #00ffaa66;
     }
 
     .btn:hover {
       background: #00aaff;
       color: #fff;
-      box-shadow: 0 0 20px #00aaff88;
-    }
-
-    section.status {
-      max-width: 1100px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: #151515;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px rgba(0,255,170,0.05);
-    }
-
-    section.status h2 {
-      color: #00ffaa;
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      text-shadow: 0 0 5px #00ffaa;
-    }
-
-    .status-item {
-      margin-bottom: 2rem;
-    }
-
-    .status-item h3 {
-      margin-bottom: 0.3rem;
-      color: #00aaff;
-    }
-
-    .status-item p {
-      font-size: 0.95rem;
-      color: #ccc;
-      margin: 0.2rem 0;
+      box-shadow: 0 0 20px #00aaff99;
     }
 
     footer {
       text-align: center;
-      padding: 1rem;
+      padding: 2rem 1rem;
       font-size: 0.85rem;
-      color: #666;
-    }
-
-    @keyframes flicker {
-      0% { opacity: 1; }
-      50% { opacity: 0.85; }
-      100% { opacity: 1; }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+      color: #555;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>🚀 NeuClix Project Hub</h1>
+    <img src="https://kzmov9pprwibsw6dsmt6.lite.vusercontent.net/logo.png" alt="NeuClix Logo" />
+    <h1>NeuClix Project Hub</h1>
     <p>Smarter content. Powerful automation. Future-ready platform.</p>
   </header>
 
   <section class="grid">
     <div class="card">
-      <h3>🧠 NeuClix.com</h3>
-      <p>Drupal 10 + Vue frontend. YAML-based content types. Hosted on DigitalOcean.</p>
+      <h3>NeuClix.com</h3>
+      <p>Built in Drupal 10 with Vue component strategy. Custom content types using YAML + Twig. Hosted on DigitalOcean.</p>
     </div>
     <div class="card">
-      <h3>🤖 MCP + Chain Reactor</h3>
-      <p>n8n-based AI control panel. Generates SEO-rich content, schema, and video scripts.</p>
+      <h3>MCP + Chain Reactor</h3>
+      <p>AI-driven content pack generator. n8n orchestrates prompt packs, schema output, markdown, and blog SEO assets.</p>
     </div>
     <div class="card">
-      <h3>⚙️ Onboarding App</h3>
-      <p>Firebase chatbot collects business info. Feeds into Sheets and GPT pipeline via n8n.</p>
+      <h3>Onboarding App</h3>
+      <p>Firebase-based chatbot collecting business info. Tied to n8n automation and GPT enrichment flows.</p>
     </div>
     <div class="card">
-      <h3>📄 Press Release Engine</h3>
-      <p>Auto-generates publish-ready press releases tied to GPT and Releasethepress.com.</p>
+      <h3>Press Release Engine</h3>
+      <p>Auto-generates GPT press kits and pushes to releasethepress.com with structured metadata and AI-written headlines.</p>
     </div>
   </section>
 
   <section class="status">
-    <h2>🧾 Project Status</h2>
+    <h2>📌 Project Status</h2>
 
     <div class="status-item">
       <h3>NeuClix.com Website</h3>
